Fix: Add pg and supabase dependencies

--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "jsonwebtoken": "^8.4.0",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
-    "mysql2": "^1.6.4",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
+    "@supabase/supabase-js": "^2.39.3",
     "node-mailjet": "^6.0.9",
     "nodemailer": "^6.4.6",
     "passport": "^0.4.0",
