--- a/package.json
+++ b/package.json
@@ -18,12 +18,26 @@
   },
   "homepage": "https://gitlab.com/tsenguun/amsa-backend#README",
   "dependencies": {
+    "@supabase/supabase-js": "^2.84.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.18.3",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
+    "express": "^5.1.0",
+    "express-validator": "^7.3.1",
+    "helmet": "^8.1.0",
+    "jsdom": "^27.2.0",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.1",
+    "multer": "^2.0.2",
+    "nodemailer": "^7.0.10",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "pg": "^8.16.3",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^4.42.0",
     "xml-js": "^1.6.11"
   },
