--- a/package.json
+++ b/package.json
@@ -2,21 +2,23 @@
   "name": "amsa-backend",
   "version": "1.5.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://gitlab.com/tsenguun/amsa-backend.git"
+    "url": "git+https://github.com/sukhbatl/amsa-backend-vercel.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://gitlab.com/tsenguun/amsa-backend/issues"
+    "url": "https://github.com/sukhbatl/amsa-backend-vercel/issues"
   },
-  "homepage": "https://gitlab.com/tsenguun/amsa-backend#README",
+  "homepage": "https://github.com/sukhbatl/amsa-backend-vercel#README",
   "dependencies": {
     "@supabase/supabase-js": "^2.84.0",
     "bcrypt": "^6.0.0",
@@ -30,6 +32,7 @@
     "helmet": "^8.1.0",
     "jsdom": "^27.2.0",
     "jsonwebtoken": "^9.0.2",
+    "mime-types": "^3.0.2",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.10",
